[Upgrade] Fix Paths namespace~