@@ -1,6 +1,5 @@
 package actions;
 
-import com.intellij.history.core.Paths;
 import com.intellij.openapi.actionSystem.AnAction;
 import com.intellij.openapi.actionSystem.AnActionEvent;
 import com.intellij.openapi.vfs.impl.local.LocalFileSystemImpl;
@@ -12,6 +11,7 @@ import util.MyProjectHolder;
 import util.core.MyFileUtils;
 
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 public class CreateNewBlenderPanelAction extends AnAction {
 
@@ -28,7 +28,7 @@ public class CreateNewBlenderPanelAction extends AnAction {
     public void actionPerformed(@NotNull AnActionEvent anActionEvent) {
         NewBlenderPanelWrapper dialog = new NewBlenderPanelWrapper(project.getProject());
         if (dialog.showAndGet()) {
-            String panelsPath = Paths.appended(virtualBlenderFile.getSubRootVirtualFile().getPath(), "panels");
+            String panelsPath = Paths.get(virtualBlenderFile.getSubRootVirtualFile().getPath(), "panels").toString();
 
             String stream = MyInputStreamHelper.readString(this.getClass().getClassLoader().getResourceAsStream("Python/Templates/new_panel.py"));
             stream = stream.replace("PANEL_CLASS_NAME", dialog.form.getPanelClassName());
@@ -39,7 +39,7 @@ public class CreateNewBlenderPanelAction extends AnAction {
             stream = stream.replace("$REGION_TYPE$", dialog.form.getRegionType());
 
             if (MyFileUtils.cantCreateDirectory(panelsPath)) return;
-            MyFileUtils.write(Path.of(Paths.appended(panelsPath, dialog.form.getPanelFileName())), stream);
+            MyFileUtils.write(Path.of(Paths.get(panelsPath, dialog.form.getPanelFileName()).toString()), stream);
             LocalFileSystemImpl.getInstance().refresh(true);
         }
     }
